Bug: Toc may overflow. #19.

--- a/source/css/_section/sidebar.styl
+++ b/source/css/_section/sidebar.styl
@@ -190,7 +190,10 @@
   }
 }
 
+
 .post-toc {
+  overflow: hidden;
+  position: relative;
   margin-top: 20px;
 }
 
